Use Disabled Text color when needed

With the same logic taken 1:1 from the plugin in qqc2-desktop-style,
notice when the parent item or window is disabled, and change the text
color accordingly

BUG:501633